navbar and animations

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -1,17 +1,17 @@
-<nav class="nav-extended">
-    <div class="nav-content">
+<nav class="nav-extended navbar-fixed">
+    <div class="nav-content right">
         <ul class="tabs tabs-transparent">
             <li class="tab">
-                <a href="#inicio">Inicio</a>
+                <a class="lowercase" href="#inicio">Inicio</a>
             </li>
             <li class="tab">
-                <a class="active" href="#servicio">Servicio</a>
+                <a class="lowercase" class="active" href="#servicio">Servicio</a>
             </li>
             <li class="tab">
-                <a href="#nosotros">Nosotros</a>
+                <a class="lowercase" href="#nosotros">Nosotros</a>
             </li>
             <li class="tab">
-                <a href="#contacto">Contacto</a>
+                <a class="lowercase" href="#contacto">Contacto</a>
             </li>
         </ul>
     </div>
@@ -20,10 +20,10 @@
 <div id="inicio" class="parallax-container valign-wrapper blue-div">
     <div class="row">
         <div class="col l5 m5 s12 animated fadeInRight">
-            <img src="app/assets/img/1.jpg" alt="">
+            <img class="centrarImg" src="app/assets/img/1.png" alt="">
         </div>
         <div class="col l7 m7 s12 animated fadeInUp">
-            <img height="80px" src="app/assets/img/logo.png" alt="Koomkin Logo">
+            <img height="80px" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
             <h1>
                 <b>¿Cuántos clientes nuevos quieres hoy?</b>
             </h1>
@@ -43,7 +43,7 @@
                 <h2>Nuestro sistema de inteligencia artificial identifica la cobertura óptima y
                     <b>el canal más efectivo para que obtengas clientes nuevos.</b>
                 </h2>
-                <div class="socialMedia">
+                <div class="socialMedia center">
                     <div class="fa fa-instagram"></div>
                     <div class="fa fa-linkedin"></div>
                     <div class="fa fa-twitter"></div>
@@ -53,7 +53,8 @@
                     <div class="fa fa-foursquare"></div>
                 </div>
             </div>
-            <div class="col l5 m5 s12">
+            <div class="col l5 m5 s12 animated fadeInDown">
+                <img class="centrarImg" src="app/assets/img/2.png" alt="">
             </div>
         </div>
     </div>
@@ -78,17 +79,19 @@
 
 <div id="contacto" class="parallax-container valign-wrapper brown-div">
     <div class="row">
-        <div class="container">
-            <div class="col l8 m8 s12">
-                <h1>
-                    <b>Información a tiempo</b>
-                </h1>
-                <h2>Ingresa desde nuestra App y evalúa en tiempo real el
-                    <b>desempeño de tu campaña.</b>
-                </h2>
-            </div>
-            <div class="col l4 m4 s12">
-            </div>
+
+        <div class="col l7 m7 s12">
+            <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+            <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+            <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+        </div>
+        <div class="col l5 m5 s12">
+            <h1>
+                <b>Información a tiempo</b>
+            </h1>
+            <h2>Ingresa desde nuestra App y evalúa en tiempo real el
+                <b>desempeño de tu campaña.</b>
+            </h2>
         </div>
     </div>
 </div>
