--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,14 +1,43 @@
 nav {
     background:#C8E4ED;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: lowercase;
 }
 
-img {
+#1 {
+    animation-delay: 1s;
+}
+
+#2 {
+    animation-delay: 2s;
+}
+
+#3 {
+    animation-delay: 3s;
+}
+
+.navbar-fixed {
+    top: 0;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+}
+
+.lowercase{
+    text-transform: lowercase;
+}
+
+.centrarImg {
     display: block;
     margin: auto;
 }
 
 h1 {
     color: white;
+}
+
+h2 {
+    padding-left: 30px;
 }
 
 .socialMedia{
@@ -30,4 +59,17 @@ h1 {
 
 .brown-div {
     background:#D39263;   
+}
+
+.tabs.tabs-transparent .tab a.active {
+    color: black;
+}
+
+.tabs.tabs-transparent .tab a{
+    color: black;
+}
+
+.tabs.tabs-transparent .indicator {
+    background-color: rgb(61, 170, 209);
+    margin-bottom: 10px;
 }
