simple scroll animations

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -1,37 +1,45 @@
 <nav class="nav-extended navbar-fixed">
-    <div class="nav-content right">
-        <ul class="tabs tabs-transparent">
-            <li class="tab">
-                <a class="lowercase" href="#inicio">Inicio</a>
-            </li>
-            <li class="tab">
-                <a class="lowercase" class="active" href="#servicio">Servicio</a>
-            </li>
-            <li class="tab">
-                <a class="lowercase" href="#nosotros">Nosotros</a>
-            </li>
-            <li class="tab">
-                <a class="lowercase" href="#contacto">Contacto</a>
-            </li>
-        </ul>
+    <div class="nav-content">
+        <div class="left">
+            <img class="navlogo" height="25px" src="app/assets/img/Logo_Koomkin.png" alt="">
+        </div>
+        <div class="right">
+            <ul class="tabs tabs-transparent">
+                <li class="tab">
+                    <a class="lowercase" href="#inicio">Inicio</a>
+                </li>
+                <li class="tab">
+                    <a class="lowercase" class="active" href="#servicio">Servicio</a>
+                </li>
+                <li class="tab">
+                    <a class="lowercase" href="#nosotros">Nosotros</a>
+                </li>
+                <li class="tab">
+                    <a class="lowercase" href="#contacto">Contacto</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
 
-<div id="inicio" class="parallax-container valign-wrapper blue-div">
-    <div class="row">
-        <div class="col l5 m5 s12 animated fadeInRight">
-            <img class="centrarImg" src="app/assets/img/1.png" alt="">
-        </div>
-        <div class="col l7 m7 s12 animated fadeInUp">
-            <img height="80px" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
-            <h1>
-                <b>¿Cuántos clientes nuevos quieres hoy?</b>
-            </h1>
-            <h2>Te presentamos el canal de ventas
-                <b>No. 1 para PYMES</b> en México.</h2>
+<div id="inicio">
+    <div class="parallax-container valign-wrapper blue-div">
+        <div class="row">
+            <div class="col l5 m5 s12 animated fadeInRight 2">
+                <img class="centrarImg phone" src="app/assets/img/1.png" alt="">
+            </div>
+            <div class="col l7 m7 s12 animated fadeInUp">
+                <img height="80px" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
+                <h1>
+                    <b>¿Cuántos clientes nuevos quieres hoy?</b>
+                </h1>
+                <h2>Te presentamos el canal de ventas
+                    <b>No. 1 para PYMES</b> en México.</h2>
+            </div>
         </div>
     </div>
 </div>
+
 
 <div id="servicio" class="parallax-container valign-wrapper green-div">
     <div class="container">
@@ -39,19 +47,21 @@
             <div class="col l7 m7 s12 animated fadeInUp">
                 <h1>
                     <b>Un algoritmo inteligente</b>
-                </h1>
+                    <div class="linea"></div>
+                k</h1>
                 <h2>Nuestro sistema de inteligencia artificial identifica la cobertura óptima y
                     <b>el canal más efectivo para que obtengas clientes nuevos.</b>
+                    <div class="socialMedia">
+                        <br>
+                        <div class="fa fa-instagram"></div>
+                        <div class="fa fa-linkedin"></div>
+                        <div class="fa fa-twitter"></div>
+                        <div class="fa fa-facebook"></div>
+                        <div class="fa fa-google"></div>
+                        <div class="fa fa-youtube"></div>
+                        <div class="fa fa-foursquare"></div>
+                    </div>
                 </h2>
-                <div class="socialMedia center">
-                    <div class="fa fa-instagram"></div>
-                    <div class="fa fa-linkedin"></div>
-                    <div class="fa fa-twitter"></div>
-                    <div class="fa fa-facebook"></div>
-                    <div class="fa fa-google"></div>
-                    <div class="fa fa-youtube"></div>
-                    <div class="fa fa-foursquare"></div>
-                </div>
             </div>
             <div class="col l5 m5 s12 animated fadeInDown">
                 <img class="centrarImg" src="app/assets/img/2.png" alt="">
@@ -64,6 +74,10 @@
     <div class="container">
         <div class="row">
             <div class="col l4 m4 s12">
+                <img class="up" height="50px" src="app/assets/img/avatar.jpg" alt="">
+                <img class="down" height="50px" src="app/assets/img/avatar.jpg" alt="">
+                <img class="up" height="50px" src="app/assets/img/avatar.jpg" alt="">
+                <img class="down" height="50px" src="app/assets/img/avatar.jpg" alt="">
             </div>
             <div class="col l8 m8 s12">
                 <h1>
@@ -81,7 +95,7 @@
     <div class="row">
 
         <div class="col l7 m7 s12">
-            <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+            <img class="animated bounceInDown uno" height="100px" src="app/assets/img/3.png" alt="">
             <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
             <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
         </div>
