--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,15 +1,20 @@
 nav {
-    background:#C8E4ED;
+    background:rgba(0, 0, 0, 0.15);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: lowercase;
 }
 
-#1 {
-    animation-delay: 1s;
+.navlogo {
+    padding-left: 25px;
+    margin-top: 10px;
+}
+
+.uno {
+    -webkit-animation-delay: 3;
 }
 
 #2 {
-    animation-delay: 2s;
+    animation-delay: 0.74s;
 }
 
 #3 {
@@ -37,6 +42,7 @@ h1 {
 }
 
 h2 {
+    color: #3a4d57;
     padding-left: 30px;
 }
 
@@ -62,14 +68,20 @@ h2 {
 }
 
 .tabs.tabs-transparent .tab a.active {
-    color: black;
+    color: #3a4d57;
 }
 
 .tabs.tabs-transparent .tab a{
-    color: black;
+    color: #3a4d57;
 }
 
 .tabs.tabs-transparent .indicator {
     background-color: rgb(61, 170, 209);
     margin-bottom: 10px;
+}
+
+.linea {
+    color: #3a4d57;
+    height: 100px;
+    width: 100px;
 }
