--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -25,8 +25,9 @@
 <div id="inicio">
     <div class="parallax-container valign-wrapper blue-div">
         <div class="row">
-            <div class="col l5 m5 s12 animated zoomIn 2">
-                <img class="centrarImg" id="phone" src="app/assets/img/1.png" alt="">
+            <div class="col l5 m5 s12">
+                <img id="phone" class="animated zoomIn" src="app/assets/img/solo-telefono.png" alt="">
+                <img id="lead" class="animated zoomIn" src="app/assets/img/solo-lead.png" alt="">
             </div>
             <div class="col l7 m7 s12 animated zoomIn">
                 <img id="logo" height="80px" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
@@ -39,7 +40,7 @@
         </div>
     </div>
     <div class="parallax-container valign-wrapper green-div">
-        <div class="container">
+        <div class="container sec2">
             <div class="row">
                 <div class="col l7 m7 s12 animated fadeInUp">
                     <h1>
@@ -86,19 +87,21 @@
         </div>
     </div>
     <div class="parallax-container valign-wrapper brown-div">
-        <div class="row">
-            <div class="col l8 m8 s12">
-                <img class="animated bounceInDown uno" height="100px" src="app/assets/img/3.png" alt="">
-                <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
-                <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
-            </div>
-            <div class="col l4 m4 s12">
-                <h1>
-                    <b>Información a tiempo</b>
-                </h1>
-                <h2>Ingresa desde nuestra App y evalúa en tiempo real el
-                    <b>desempeño de tu campaña.</b>
-                </h2>
+        <div class="container">
+            <div class="row">
+                <div class="col l7 m7 s12">
+                    <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+                    <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+                    <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+                </div>
+                <div class="col l5 m5 s12">
+                    <h1>
+                        <b>Información a tiempo</b>
+                    </h1>
+                    <h2>Ingresa desde nuestra App y evalúa en tiempo real el
+                        <b>desempeño de tu campaña.</b>
+                    </h2>
+                </div>
             </div>
         </div>
     </div>
@@ -106,7 +109,7 @@
 <div id="servicio" class="parallax-container valign-wrapper green-div">
     <div class="container">
         <div class="row">
-            <div class="col l7 m7 s12 animated fadeInUp">
+            <div class="col l6 m6 s12 animated zoomIn">
                 <h1>
                     <b>Un algoritmo inteligente</b>
                 </h1>
@@ -124,7 +127,7 @@
                     </div>
                 </h2>
             </div>
-            <div class="col l5 m5 s12 animated fadeInDown">
+            <div class="col l6 m6 s12 animated zoomIn">
                 <img class="centrarImg" src="app/assets/img/2.png" alt="">
             </div>
         </div>
@@ -132,7 +135,7 @@
 </div>
 
 <div id="nosotros" class="parallax-container valign-wrapper blue-div">
-    <div class="container">
+    <div class="container animated zoomIn">
         <div class="row">
             <div class="col l4 m4 s12">
             </div>
@@ -149,12 +152,12 @@
 </div>
 
 <div id="contacto" class="parallax-container valign-wrapper brown-div">
-    <div class="container">
+    <div class="container animated zoomIn">
         <div class="row">
             <div class="col l7 m7 s12">
-                <img class="animated bounceInDown uno" height="100px" src="app/assets/img/3.png" alt="">
-                <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
-                <img class="animated bounceInDown" height="100px" src="app/assets/img/3.png" alt="">
+                <img height="100px" src="app/assets/img/3.png" alt="">
+                <img height="100px" src="app/assets/img/3.png" alt="">
+                <img height="100px" src="app/assets/img/3.png" alt="">
             </div>
             <div class="col l5 m5 s12">
                 <h1>
