--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -9,23 +9,30 @@ nav {
     margin-top: 10px;
 }
 
-#logo{
-
-}
-
 .cinta {
     transform: rotate(85deg);
     height: 375px;
 }
 
 .uno {
-    -webkit-animation-delay: 3;
+    animation-delay: 3;
 }
 
 #phone {
-    animation-duration: 10s;
-    animation-delay: 10s;
+    position: absolute;
+    left: 0%;
+    top: -3%;
+    z-index: 2;
+    height: 115%;
   }
+#lead {
+    -webkit-animation-delay: 2s;
+    position: absolute;
+    left: 0%;
+    top: -3%;
+    z-index: 2;
+    height: 115%;
+}
 
 .navbar-fixed {
     top: 0;
@@ -36,11 +43,6 @@ nav {
 
 .lowercase{
     text-transform: lowercase;
-}
-
-.centrarImg {
-    display: block;
-    margin: auto;
 }
 
 h1 {
