--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -26,7 +26,7 @@ nav {
     height: 115%;
   }
 #lead {
-    -webkit-animation-delay: 2s;
+    -webkit-animation-delay: .5s;
     position: absolute;
     left: 0%;
     top: -3%;
