responsigve web app in progress

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -4,7 +4,7 @@
             <img class="navlogo" height="25px" src="app/assets/img/Logo_Koomkin.png" alt="">
         </div>
         <div class="right">
-            <ul class="tabs tabs-transparent">
+            <ul class="tabs tabs-transparent hide-on-med-and-down">
                 <li class="tab">
                     <a class="lowercase" href="#inicio">Inicio</a>
                 </li>
@@ -29,8 +29,8 @@
                 <img id="phone" class="animated zoomIn" src="app/assets/img/solo-telefono.png" alt="">
                 <img id="lead" class="animated zoomIn" src="app/assets/img/solo-lead.png" alt="">
             </div>
-            <div class="col l7 m7 s12 animated zoomIn">
-                <img id="logo" height="80px" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
+            <div id="first" class="col l7 m7 s12 animated zoomIn">
+                <img id="logo" src="app/assets/img/Logo_Koomkin.png" alt="Koomkin Logo">
                 <h1>
                     <b>¿Cuántos clientes nuevos quieres hoy?</b>
                 </h1>
@@ -42,7 +42,7 @@
     <div class="parallax-container valign-wrapper green-div">
         <div class="container sec2">
             <div class="row">
-                <div class="col l7 m7 s12 animated fadeInUp">
+                <div id="second" class="col l7 m7 s12 animated fadeInUp">
                     <h1>
                         <b>Un algoritmo inteligente</b>
                     </h1>
