favicon and new elements in progress

--- a/app/components/homepage-component/homepage.component.html
+++ b/app/components/homepage-component/homepage.component.html
@@ -22,8 +22,8 @@
     </div>
 </nav>
 
-<div id="inicio">
-    <div class="parallax-container valign-wrapper blue-div">
+<div>
+    <div class="parallax-container valign-wrapper bluem-div">
         <div class="row">
             <div class="col l5 m5 s12">
                 <img id="phone" class="animated zoomIn" src="app/assets/img/solo-telefono.png" alt="">
@@ -39,16 +39,36 @@
             </div>
         </div>
     </div>
-    <div class="parallax-container valign-wrapper green-div">
+    <div class="parallax-container valign-wrapper blue-div">
+        <div class="container">
+            <div class="row">
+                <div class="col l7 m7 s12 cinta">
+                    <img class="up" src="app/assets/img/cinta.jpg" alt="">
+                    <img class="down" src="app/assets/img/cinta.jpg" alt="">
+                    <img class="up" src="app/assets/img/cinta.jpg" alt="">
+                    <img class="down" src="app/assets/img/cinta.jpg" alt="">
+                </div>
+                <div class="col l5 m5 s12">
+                    <h1>
+                        <b>Para todos los negocios</b>
+                    </h1>
+                    <h2>Koomkin está diseñado para funcionar
+                        <b>con cualquier tipo de empresa, sin importar su giro o su tamaño.</b>
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container valign-wrapper gray-div">
         <div class="container sec2">
             <div class="row">
                 <div id="second" class="col l7 m7 s12 animated fadeInUp">
                     <h1>
                         <b>Un algoritmo inteligente</b>
                     </h1>
-                    <h2>Nuestro sistema de inteligencia artificial identifica la cobertura óptima y
+                    <h2 class="socialMedia">Nuestro sistema de inteligencia artificial identifica la cobertura óptima y
                         <b>el canal más efectivo para que obtengas clientes nuevos.</b>
-                        <div class="socialMedia">
+                        <div>
                             <br>
                             <div class="fa fa-instagram"></div>
                             <div class="fa fa-linkedin"></div>
@@ -66,27 +86,7 @@
             </div>
         </div>
     </div>
-    <div class="parallax-container valign-wrapper blue-div">
-        <div class="container">
-            <div class="row">
-                <div class="col l8 m8 s12 cinta">
-                    <img class="up" src="app/assets/img/cinta.jpg" alt="">
-                    <img class="down" src="app/assets/img/cinta.jpg" alt="">
-                    <img class="up" src="app/assets/img/cinta.jpg" alt="">
-                    <img class="down" src="app/assets/img/cinta.jpg" alt="">
-                </div>
-                <div class="col l4 m4 s12">
-                    <h1>
-                        <b>Para todos los negocios</b>
-                    </h1>
-                    <h2>Koomkin está diseñado para funcionar
-                        <b>con cualquier tipo de empresa, sin importar su giro o su tamaño.</b>
-                    </h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="parallax-container valign-wrapper brown-div">
+    <div class="parallax-container valign-wrapper bluem-div">
         <div class="container">
             <div class="row">
                 <div class="col l7 m7 s12">
@@ -105,68 +105,98 @@
             </div>
         </div>
     </div>
-</div>
-<div id="servicio" class="parallax-container valign-wrapper green-div">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 m6 s12 animated zoomIn">
-                <h1>
-                    <b>Un algoritmo inteligente</b>
-                </h1>
-                <h2>Nuestro sistema de inteligencia artificial identifica la cobertura óptima y
-                    <b>el canal más efectivo para que obtengas clientes nuevos.</b>
-                    <div class="socialMedia">
-                        <br>
-                        <div class="fa fa-instagram"></div>
-                        <div class="fa fa-linkedin"></div>
-                        <div class="fa fa-twitter"></div>
-                        <div class="fa fa-facebook"></div>
-                        <div class="fa fa-google"></div>
-                        <div class="fa fa-youtube"></div>
-                        <div class="fa fa-foursquare"></div>
+    <div class="parallax-container valign-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="col l8 m8 s12">
+                    <h1 style="color: #3a4d57">OPTIMIZA TU CAMPAÑA</h1>
+                    <h2>Evalúa tus prospectos y Koomkin logic se configura para
+                        <b>mandarte solamente prospectos que te sirvan.</b>
+                    </h2>
+                </div>
+                <div class="col l4 m4 s12">
+                    <img id="completePhone" src="app/assets/img/telefono-completo.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container valign-wrapper dblue-div">
+        <div class="container">
+            <div class="row">
+                <div class="socialMedia">
+                    <div class="col l12 m12 s12">
+                        <h1>DATOS DIVERTIDOS</h1>
                     </div>
-                </h2>
+                    <div class="col l3 m3 s3">
+                        <h2>+8,000</h2>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h2>+50,000</h2>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h2>+11,000</h2>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h2>+16,000</h2>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h5>CLIENTES CONMTENTOS</h5>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h5>IMPRERSIONES EN LOS PRINCIPALES CANALES DIGITALES</h5>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h5>PROSPECTTOS MENSUALES PARA NUESTROS CLIENTES</h5>
+                    </div>
+                    <div class="col l3 m3 s3">
+                        <h5>TAZAS DE CAFÉ</h5>
+                    </div>
+                </div>
             </div>
-            <div class="col l6 m6 s12 animated zoomIn">
-                <img class="centrarImg" src="app/assets/img/2.png" alt="">
+        </div>
+    </div>
+    <div class="parallax-container valign-wrapper">
+        <div class="container">
+            <h1 style="color: #3a4d57;">CONTACTO</h1>
+            <div class="row">
+                <div class="col l6 m6 s12">
+                    <form action="">
+                        <div class="input-field">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Nombre</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Email</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Asunto</label>
+                        </div>
+                        <div class="input-field">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Mensaje</label>
+                        </div>
+                        <a id="enviar" class="waves-effect waves-light btn">Enviar</a>
+                    </form>
+                </div>
+                <div class="col l6 m6 s12">
+                    <b>Queremos escuchar sobre ti</b>
+                    <p>Av. Horacio 1844 - 7C</p>
+                    <p>Polanco, CDMX</p>
+                    <br>
+                    <b>contacto@koomkin.com</b>
+                    <b>Tel: (55) 5535 - 0499</b>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<div id="nosotros" class="parallax-container valign-wrapper blue-div">
-    <div class="container animated zoomIn">
-        <div class="row">
-            <div class="col l4 m4 s12">
-            </div>
-            <div class="col l8 m8 s12">
-                <h1>
-                    <b>Para todos los negocios</b>
-                </h1>
-                <h2>Koomkin está diseñado para funcionar
-                    <b>con cualquier tipo de empresa, sin importar su giro o su tamaño.</b>
-                </h2>
-            </div>
+<footer class="page-footer gray-div">
+    <div class="footer-copyright">
+        <div class="container">
+            © 2017 Grupo Koomkin
         </div>
     </div>
-</div>
-
-<div id="contacto" class="parallax-container valign-wrapper brown-div">
-    <div class="container animated zoomIn">
-        <div class="row">
-            <div class="col l7 m7 s12">
-                <img height="100px" src="app/assets/img/3.png" alt="">
-                <img height="100px" src="app/assets/img/3.png" alt="">
-                <img height="100px" src="app/assets/img/3.png" alt="">
-            </div>
-            <div class="col l5 m5 s12">
-                <h1>
-                    <b>Información a tiempo</b>
-                </h1>
-                <h2>Ingresa desde nuestra App y evalúa en tiempo real el
-                    <b>desempeño de tu campaña.</b>
-                </h2>
-            </div>
-        </div>
-    </div>
-</div>
+</footer>
